--- a/index.html
+++ b/index.html
@@ -117,8 +117,8 @@
   <main>
     <ul id="menu">
       <li data-link="python.html">Python</li>
-      <li data-link="projects.html">Projects</li>
-      <li data-link="github.html">GitHub</li>
+      <li data-link="https://kittbash.vercel.app/projects.html">Projects</li>
+      <li data-link="https://github.com/Enoughcode69">GitHub</li>
     </ul>
   </main>
 
