--- a/index.html
+++ b/index.html
@@ -117,8 +117,10 @@
   <main>
     <ul id="menu">
       <li data-link="python.html">Python</li>
+      <li data-link="notes.html">Notes</li>
       <li data-link="https://kittbash.vercel.app/projects.html">Projects</li>
       <li data-link="https://github.com/Enoughcode69">GitHub</li>
+      
     </ul>
   </main>
 
