--- a/python.html
+++ b/python.html
@@ -115,13 +115,13 @@
       A gentle introduction to one of the most beginner-friendly languages.</p>
     </div>
 
-    <div class="topic" onclick="openPage('setup.html')">
+    <div class="topic" onclick="openPage('comingsoon.html')">
       <h2>2️⃣ Python Setup</h2>
       <p>Install Python on your computer, verify your setup, and prepare your environment  
       to start coding confidently.</p>
     </div>
 
-    <div class="topic" onclick="openPage('firstprogram.html')">
+    <div class="topic" onclick="openPage('comingsoon.html')">
       <h2>3️⃣ Your First Python Program</h2>
       <p>Write your first Python program — “Hello, Codeloop!”  
       Understand how Python runs and displays your code output.</p>
